--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" method="post" enctype="multipart/form-data" autocomplete="off">
+          <form class="img-upload__form" id="upload-select-image" method="post" enctype="multipart/form-data" action="https://27.javascript.pages.academy/kekstagram-simple" autocomplete="off">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start">
@@ -105,7 +105,7 @@
 
                 <!-- Добавление комментария к изображению -->
                 <fieldset class="img-upload__text text">
-                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..."></textarea>
+                    <textarea class="text__description" name="description" minlength="20" maxlength="140" placeholder="Ваш комментарий..." required></textarea>
                 </fieldset>
 
                 <!-- Кнопка для отправки данных на сервер -->
@@ -164,6 +164,7 @@
       </div>
     </section>
   </template>
+  <script src="./vendor/pristine/pristine.min.js" type="text/javascript"></script>
   <script type="module" src="./js/main.js"></script>
 </body>
 </html>
