--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
 
                 <!-- Добавление комментария к изображению -->
                 <fieldset class="img-upload__text text">
-                    <textarea class="text__description" name="description" minlength="20" maxlength="140" placeholder="Ваш комментарий..." required></textarea>
+                    <textarea class="text__description" 
+                    name="description" minlength="20" maxlength="140" data-pristine-required-message="Обязательное поле" 
+                    data-pristine-minlength-message="Минимальная длина 20 символов" data-pristine-maxlength-meassage="Максимальная длина 140 символов" placeholder="Ваш комментарий..." required></textarea>
                 </fieldset>
 
                 <!-- Кнопка для отправки данных на сервер -->
@@ -164,6 +166,7 @@
       </div>
     </section>
   </template>
+  <script src="./vendor/nouislider/nouislider.js" type="text/javascript"></script>
   <script src="./vendor/pristine/pristine.min.js" type="text/javascript"></script>
   <script type="module" src="./js/main.js"></script>
 </body>
