--- a/index.html
+++ b/index.html
@@ -169,6 +169,6 @@
   </template>
   <script src="./vendor/nouislider/nouislider.js" type="text/javascript"></script>
   <script src="./vendor/pristine/pristine.min.js" type="text/javascript"></script>
-  <script type="module" src="./js/main.js"></script>
+  <script src="./js/main.js" type="module"></script>
 </body>
 </html>
